--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
         "vscode": "^1.1.6",
         "@types/node": "^7.0.43",
         "@types/mocha": "^2.2.42"
+    },
+    "dependencies": {
+        "guid-typescript": "^1.0.7"
     }
 }
